$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 2.0-1 (opened September 8, 2011)
	
Version 2.0-0 (released September 8, 2011)

	* opened the release candidate of vegan_2.0-0 on September 3,
	2011 in the devel branch pkg/vegan at r1785.
	* Release: Copied the devel pkg/vegan branch to release
	branches/2.0 at r1796 (inst/doc/vegan.bib at r1798), and removed
	tests/ directory.
	* merge r1800: Abstract to diversity-vegan.Rnw.
	* some old functions used attributes(x)$which instead of more
	correct attr(x, "which"), and in addition postMDS() used
	attributes(x)$names instead of names(). Concerns anosim(),
	initMDS(), postMDS(), mantel(), mantel.partial() and
	mso(). initMDS() was one of the two functions that was unchanged
	since the first vegan release on 6/9/01, and it was changed day
	before it turned ten-years-old. After this, wisconsin() is the
	only unchanged function from the first release.
	* vegan-defunct: put definitions of removed "new" permutation
	functions to vegan-defunct and have a vegan-defunct.Rd for them. 

VEGAN DEVEL VERSIONS at http://vegan.r-forge.r-project.org/

Version 1.92-2 (closed September 3, 2011)

	* monoMDS: saves and displays info on the dissimilarities used,
	and displays the number of points. Checks that input is
	dissimilarities, and warns on negative ones.

	* MDSrotate: metaMDSrotate() was renamed to MDSrotate(), and
	metaMDSrotate() was .Deprecated. 

	* meandist: warns if some dissimilarities are negative (small
	negative values are tolerated).

	* vegandocs: copied branches/1.17/inst/NEWS as ONEWS (old news),
	and adapted vegandocs. Expanded documentation of vegandocs().
	
Version 1.92-1 (closed August 28, 2011)

	* adonis, betadisper, mrpp: check that dissimilarities are
	non-negative (small negative values are tolerated). The test was
	not added to meandist: there may be legitimate usages for
	correlation-like objects although summary.meandist() is